--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ ul {
 /* top banner */
 
 .top-banner {
-    background-image: url('/img/asset\ 32.png');
+    background-image: url('../img/asset\ 32.png');
     background-color: #4fb3d4;
     background-size: 300px;
 }
@@ -320,7 +320,7 @@ header {
     position: relative;
     height: 300px;
     background: black;
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/img/asset\ 36.jpeg');
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('../img/asset\ 36.jpeg');
     background-size: cover;
     transition: 0.2s ease-out;
 
@@ -337,7 +337,7 @@ header {
     position: relative;
     height: 300px;
     background: black;
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/img/asset\ 37.jpeg');
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('../img/asset\ 37.jpeg');
     background-size: cover;
     transition: 0.2s ease-out;
 
@@ -356,7 +356,7 @@ header {
     position: relative;
     height: 300px;
     background: black;
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/img/asset\ 38.jpeg');
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('../img/asset\ 38.jpeg');
     background-size: cover;
     transition: 0.2s ease-out;
 
@@ -375,7 +375,7 @@ header {
     position: relative;
     height: 300px;
     background: black;
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/img/asset\ 39.jpeg');
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('../img/asset\ 39.jpeg');
     background-size: cover;
     transition: 0.2s ease-out;
 
